--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "L3MON - Remote Android Managment Suite",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js", 
     "test": "node index.js"
   },
   "author": "D3VL",
